--- a/.travis.yml
+++ b/.travis.yml
@@ -11,14 +11,14 @@ script:
   - docker run -e CI=true m-monson/react-test npm test -- --coverage
 
 after_success:
-  - docker build -t m-monson/multi-client ./client
-  - docker build -t m-monson/multi-nginx ./nginx
-  - docker build -t m-monson/multi-server ./server
-  - docker build -t m-monson/multi-worker ./worker
+  - docker build -t markmonson/multi-client ./client
+  - docker build -t markmonson/multi-nginx ./nginx
+  - docker build -t markmonson/multi-server ./server
+  - docker build -t markmonson/multi-worker ./worker
 
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
 
-  - docker push m-monson/multi-client
-  - docker push m-monson/multi-nginx
-  - docker push m-monson/multi-server
-  - docker push m-monson/multi-worker
+  - docker push markmonson/multi-client
+  - docker push markmonson/multi-nginx
+  - docker push markmonson/multi-server
+  - docker push markmonson/multi-worker
